fix bar alignment, overflow bug in chrome, uggo shield shadow, status clearing bug. better aggro 2 color

--- a/gaming/src/app/sim/stylesheets/sim.component.playerbars.scss
+++ b/gaming/src/app/sim/stylesheets/sim.component.playerbars.scss
@@ -20,10 +20,12 @@
 .bar .fill {
     display: inline-block;
     position: relative;
-    top: -33px;
+    top: -32px;
     left: 0px;
     width: 130px;
-    height: 5px;
+    height: 6px;
+    border-radius: 4px;
+    overflow: hidden;
     box-shadow: 0px 0px 0px 1px rgb(131, 189, 255), 0px 0px 5px 2px rgb(46, 95, 255);
 }
 .bar.aggro {
@@ -32,22 +34,22 @@
     border: 2px solid rgb(46, 95, 255);
 }
 .bar.aggro .fill {
-    top: -32px;
+    top: -31px;
     width: 33px;
 }
 .bar.aggro.second {
-    border: 2px solid rgb(255, 153, 0);
+    border: 2px solid #fbefa2;
 }
 .bar.aggro.second .fill {
     width: 33px;
-    box-shadow: 0px 0px 1px 1px rgb(255, 216, 172), 0px 0px 3px 2px orange;
+    box-shadow: 0px 0px 1px 1px #8e7854, 0px 0px 3px 2px #504843;
 }
 .bar.aggro.first {
     border: 2px solid red;
 }
 .bar.aggro.first .fill {
     width: 33px;
-    box-shadow: 0px 0px 1px 1px rgb(255, 172, 172), 0px 0px 3px 2px red;
+    box-shadow: 0px 0px 1px 1px rgb(255, 172, 172), 0px 0px 3px 2px rgb(255, 75, 75);
 }
 .bar.aggro, .bar.health, .bar.mana {
     top: 30px;
@@ -74,6 +76,7 @@
     border: none;
     box-shadow: none;
     background: none;
+    border-radius: 2px;
     @include mat.progress-bar-overrides((
         active-indicator-color: rgb(255, 208, 0),
         active-indicator-height: 7px,
@@ -83,6 +86,7 @@
 .bar.shield-shadow {
     top: 31px;
     left: 50px;
+    border-radius: 4px;
     @include mat.progress-bar-overrides((
         active-indicator-color: rgba(255, 174, 0, 0.8),
         active-indicator-height: 10px,
@@ -92,13 +96,15 @@
 .bar.shield .fill, .bar.shield-shadow .fill {
     height: 6px;
     border: none;
+    border-radius: 2px;
     box-shadow: none;
 }
 .bar.shield-shadow .fill{
+    border-radius: 4px;
     height: 12px;
 }
 :host ::ng-deep .bar.shield-shadow .fill .mdc-linear-progress__bar-inner {
-    box-shadow: 0px 0px 5px 5px rgba(255, 174, 0, 1)
+    border-right: 5px solid rgba(255, 174, 0, 1);
 }
 /* #endregion */
 
